adding a supportless tube interior cap

--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,4 @@
 radiator_hook/Original.Thingiverse3342912.zip
 radiator_hook/radiator_hook.*.v1.*
 radiator_hook/radiator_hook.*.v2.*
-
+tube_interior_cap_1/tube_interior_cap_1.v*
